==> dustin-crossman/mbed-os/targets/TARGET_NORDIC/TARGET_NRF5x/qspi_api.c <==
#include "qspi_api.h"
#include "nrf_drv_common.h"
#include "nrf_drv_qspi.h"
#define MBED_HAL_QSPI_MAX_FREQ          32000000UL
#define FASTREAD_opcode     0x0B
#define READ2O_opcode       0x3B
#define READ2IO_opcode      0xBB
#define READ4O_opcode       0x6B
#define READ4IO_opcode      0xEB
#define READSFDP_opcode     0x5A
#define PP_opcode           0x02
#define PP2O_opcode         0xA2
#define PP4O_opcode         0x32
#define PP4IO_opcode        0x38
#define SCK_DELAY           0x05
#define WORD_MASK           0x03

qspi_status_t qspi_init(qspi_t *obj, PinName io0, PinName io1, PinName io2, PinName io3, PinName sclk, PinName ssel, uint32_t hz, uint8_t mode)
{
    (void)(obj);
    if (hz > MBED_HAL_QSPI_MAX_FREQ) {
        return QSPI_STATUS_INVALID_PARAMETER;
    }

    // memset(config, 0, sizeof(config));

    config.pins.sck_pin = (uint32_t)sclk;
    config.pins.csn_pin = (uint32_t)ssel;
    config.pins.io0_pin = (uint32_t)io0;
    config.pins.io1_pin = (uint32_t)io1;
    config.pins.io2_pin = (uint32_t)io2;
    config.pins.io3_pin = (uint32_t)io3;
    config.irq_priority = SPI_DEFAULT_CONFIG_IRQ_PRIORITY;

    config.phy_if.sck_freq  = nrf_frequency(hz);
    config.phy_if.sck_delay = SCK_DELAY;
    config.phy_if.dpmen = false;
    config.phy_if.spi_mode = mode == 0 ? NRF_QSPI_MODE_0 : NRF_QSPI_MODE_1;

    //Use _qspi_drv_init private function to initialize
    ret_code_t ret = _qspi_drv_init();
    if (ret == NRF_SUCCESS ) {
        return QSPI_STATUS_OK;
    } else if (ret == NRF_ERROR_INVALID_PARAM) {
        return QSPI_STATUS_INVALID_PARAMETER;
    } else {
        return QSPI_STATUS_ERROR;
    }
}

qspi_status_t qspi_write(qspi_t *obj, const qspi_command_t *command, const void *data, size_t *length)
{
    // length needs to be rounded up to the next WORD (4 bytes)
    if ((*length & WORD_MASK) > 0) {
        return QSPI_STATUS_INVALID_PARAMETER;
    }
		
    qspi_status_t status = qspi_prepare_command(obj, command, true);
    if (status != QSPI_STATUS_OK) {
        return status;
    }

    // write here does not return how much it transfered, we return transfered all
    ret_code_t ret = nrf_drv_qspi_write(data, *length, command->address.value);
    if (ret == NRF_SUCCESS ) {
        return QSPI_STATUS_OK;
    } else {
        return QSPI_STATUS_ERROR;
    }
}

qspi_status_t qspi_read(qspi_t *obj, const qspi_command_t *command, void *data, size_t *length)
{
    // length needs to be rounded up to the next WORD (4 bytes)
    if ((*length & WORD_MASK) > 0) {
        return QSPI_STATUS_INVALID_PARAMETER;
    }

    qspi_status_t status = qspi_prepare_command(obj, command, false);
    if (status != QSPI_STATUS_OK) {
        return status;
    } else {
        qspi_status_t status = qspi_prepare_command(obj, command, false);
        if (status != QSPI_STATUS_OK) {
            return status;
        }
    }

    ret_code_t ret = nrf_drv_qspi_read(data, *length, command->address.value);
    if (ret == NRF_SUCCESS ) {
        return QSPI_STATUS_OK;
    } else {
        return QSPI_STATUS_ERROR;
    }
}
