==> dustin-crossman/mbed-os/targets/TARGET_Cypress/TARGET_PSOC6/qspi_api.c <==
#include "qspi_api.h"
#include "mbed_error.h"
#include "mbed_assert.h"
#include "cmsis.h"
#include "pinmap.h"
#include "PeripheralPins.h"
#include "cy_smif_memslot.h"
#include "cy_smif.h"
#define TIMEOUT_10_MS                  (10000UL)  /* in microseconds, timeout for all blocking functions */
#define SMIF_MAX_RX_COUNT              (65536UL)
#define QSPI_DESELECT_DELAY            (7UL)
#define QSPI_PIN_MAP_IDX0              (0UL)
#define QSPI_PIN_MAP_IDX1              (1UL)
#define QSPI_PIN_MAP_IDX2              (2UL)
#define QSPI_PIN_MAP_IDX3              (3UL)
#define QSPI_PIN_MAP_IDX4              (4UL)
#define QSPI_PIN_MAP_IDX5              (5UL)
#define QSPI_PIN_MAP_IDX6              (6UL)
#define QSPI_PIN_MAP_IDX7              (7UL)

qspi_status_t qspi_init(qspi_t *obj, PinName io0, PinName io1, PinName io2, PinName io3, PinName sclk, PinName ssel, uint32_t hz, uint8_t mode)
{
    cy_en_smif_data_select_t dataSelect = CY_SMIF_DATA_SEL0;

    MBED_ASSERT(obj);
    MBED_ASSERT(io0 != (PinName)NC);
    MBED_ASSERT(io1 != (PinName)NC);
    
    // single SPI or Dual SPI - io0 & io1 must be valid and io2 & io3 must be NC.
    // Quad SPI - all IOs must be valid. 
    if (io2 != (PinName)NC) {
        MBED_ASSERT(io3 != (PinName)NC);
    } else {
        MBED_ASSERT(io3 == (PinName)NC);
    }

    MBED_ASSERT(sclk != (PinName)NC);
    MBED_ASSERT(ssel != (PinName)NC);

    // mode (CPOL and CPHA) is not supported in PSoC 6
    MBED_ASSERT(mode == 0u);

    // No pin-wise instance check is done since PSoC 6 has only one SMIF instance.
    // But all the pins are checked against the pin map
    if ( QSPI_STATUS_OK != validate_and_find_slaveselect(&obj->slaveSelect, ssel) ) {
        return QSPI_STATUS_INVALID_PARAMETER;
    }

    if (QSPI_STATUS_OK != validate_pins_and_find_dataselect(&dataSelect, io0, io1, io2, io3, sclk)) {
        return QSPI_STATUS_INVALID_PARAMETER;
    }

    // configure drive mode for the pins
    pin_function(io0, pinmap_function(io0, PinMap_QSPI_DATA));
    pin_function(io1, pinmap_function(io1, PinMap_QSPI_DATA));
    pin_function(io2, pinmap_function(io2, PinMap_QSPI_DATA));
    pin_function(io3, pinmap_function(io3, PinMap_QSPI_DATA));
    pin_function(sclk, pinmap_function(sclk, PinMap_QSPI_SCLK));
    pin_function(ssel, pinmap_function(ssel, PinMap_QSPI_SSEL));

    obj->base = SMIF0;
    cy_en_smif_status_t smif_status = Cy_SMIF_Init(obj->base, &default_qspi_config, TIMEOUT_10_MS, &obj->context);
    if (CY_SMIF_SUCCESS != smif_status) {
        return QSPI_STATUS_ERROR;
    }

    Cy_SMIF_SetDataSelect(obj->base, obj->slaveSelect, dataSelect); // Configures data select
    Cy_SMIF_Enable(obj->base, &obj->context);

    return qspi_frequency(obj, hz);
}

qspi_status_t qspi_write(qspi_t *obj, const qspi_command_t *command, const void *data, size_t *length)
{
    cy_en_smif_status_t smifStatus = CY_SMIF_SUCCESS;
    qspi_status_t status = smif_command_transfer(obj, command, command->address.value, false);

    if (QSPI_STATUS_OK == status) {
        if (command->dummy_count > 0u) {
            smifStatus = Cy_SMIF_SendDummyCycles(obj->base, command->dummy_count);
        }

        if (CY_SMIF_SUCCESS == smifStatus) {
            smifStatus = Cy_SMIF_TransmitDataBlocking(obj->base, (uint8_t *)data, *length,
                        get_cy_bus_width(command->data.bus_width), &obj->context);

            if (CY_SMIF_SUCCESS != smifStatus) {
                status = QSPI_STATUS_ERROR; 
            }
        }
    }

    return status;
}

qspi_status_t qspi_read(qspi_t *obj, const qspi_command_t *command, void *data, size_t *length)
{
    cy_en_smif_status_t smifStatus = CY_SMIF_SUCCESS;
    qspi_status_t status = QSPI_STATUS_OK; 
    uint32_t chunk = 0; 
    size_t read_bytes = *length;
    uint32_t addr = command->address.value; 

    // SMIF can read only up to 65536 bytes in one go. Split the larger read 
    // into multiple chunks
    while (read_bytes > 0) {
        chunk = (read_bytes > SMIF_MAX_RX_COUNT) ? (SMIF_MAX_RX_COUNT) : read_bytes; 

        // Address is passed outside command during a read of more than 65536 bytes. Since that
        // read has to be split into multiple chunks, the address value needs to be incremented
        // after every chunk has been read. This requires either modifying the address stored in
        // 'command' passed to read() which is not possible since command is a const pointer or 
        // to create a copy of the command object. Instead of copying the object, the address is
        // passed separately. 
        status = smif_command_transfer(obj, command, addr, false);

        if (QSPI_STATUS_OK == status) {
            if (command->dummy_count > 0u) {
                smifStatus = Cy_SMIF_SendDummyCycles(obj->base, command->dummy_count);
            }

            if (CY_SMIF_SUCCESS == smifStatus) {
                smifStatus = Cy_SMIF_ReceiveDataBlocking(obj->base, (uint8_t *)data, chunk,
                            get_cy_bus_width(command->data.bus_width), &obj->context);
                if (CY_SMIF_SUCCESS != smifStatus) {
                    status = QSPI_STATUS_ERROR;                     
                    break;
                }
            }
        }
        read_bytes -= chunk;
        addr += chunk; 
        data = (uint8_t *)data + chunk; 
    }

    return status;
}
